feat: 1. docs 2. getUserID
