# api/handler/user.go
@@ -1,6 +1,7 @@
 package handler
 
 import (
+	"github.com/doge-verse/easy-upgrade-backend/api/request"
 	"github.com/doge-verse/easy-upgrade-backend/api/response"
 	"github.com/doge-verse/easy-upgrade-backend/internal/user"
 	"github.com/doge-verse/easy-upgrade-backend/models"
@@ -31,15 +32,23 @@ func getUserByQuery(c *gin.Context) {
 	})
 }
 
+// updateEmail .
+// @Tags auth
+// @Summary update user email
+// @accept application/json
+// @Produce application/json
+// @Security ApiKeyAuth
+// @Param Authorization header string false "token"
+// @Param data body request.UpdateEmail true "update user email"
+// @Success 200 {object} response.RespResult
+// @Router /user/email [post]
 func updateEmail(c *gin.Context) {
-	param := struct {
-		Email  string `json:"email"`
-		UserID uint   `json:"userID"`
-	}{}
+	param := request.UpdateEmail{}
 	if err := c.ShouldBindQuery(&param); err != nil {
 		response.Fail(c, err)
 		return
 	}
+	param.UserID = getUserID(c)
 	if err := user.Repo.UpdateEmail(param.UserID, param.Email); err != nil {
 		response.Fail(c, err)
 		return
