# api/request/update_user.go
@@ -1,0 +1,6 @@
+package request
+
+type UpdateEmail struct {
+	UserID uint   `json:"-"`
+	Email  string `json:"email"`
+}
